# CodeSnippet

./: CMakeLists.txt  ClubMember.cpp  ClubMember.h  Logger.cpp  Logger.h  MString.cpp  MString.h  README.md  SLogger.hpp  main.cpp
